Fix styling on details page on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,9 +197,9 @@ i {
     content: "";
     position: absolute;
     top: 0;
-    right: 90%;
+    right: 100%;
     height: 100%;
-    width: 150%;
+    width: 100%;
     background: #628389;
     z-index: 100;
 }
